g90h: M87 Workshop Qualification
